# wall-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: rust.yml
src/: config.rs  error.rs  lib.rs  macros.rs  main.rs  main.rs.bak  source.rs  wall.rs
