[package]
name = "wall-rs"
version = "0.1.0"
edition = "2021"
authors = ["akumarujon <akumaru.senju@gmail.com>"]
description = "Wallpaper manager for you"
keywords = ["cli", "wallpaper"]
categories = ["command-line-utilities"]
repository = "https://github.com/akumarujon/wall-rs"
license="MIT"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
octocrab = "0.34.1"
path-absolutize = "3.1.1"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["net", "full"] }
toml = "0.8.10"
walkdir = "2.4.0"
wallpaper = "3.2.0"
zip = "0.6.6"
